plugins/eis: Guard against events of destroyed devices

libeis  might send an event for removed devices, while a libeis bug we
need to guard against it as users see crashes in the wild.

BUG:515179
FIXED-IN: 6.6.1